--- a/src/lib/components/styles/Button.css
+++ b/src/lib/components/styles/Button.css
@@ -4,12 +4,16 @@
   border-radius: 5px;
   line-height: 0;
   font-size: 14px;
+  
+  
 }
 .btn--primary {
-  background-image: linear-gradient(3deg, rgb(14, 95, 177), rgb(53, 154, 255));
-  color: #fff;
+  background-image: linear-gradient(3deg, rgb(83, 165, 247), rgb(155, 201, 247));
+  box-shadow: 5px 5px 7px 1px rgb(4, 72, 139);
+  color: rgb(112, 111, 111);
 }
 .btn--primary:hover {
-  background-image: linear-gradient(3deg, rgb(23, 89, 156), rgb(5, 119, 233));
+  background-image: linear-gradient(3deg, rgb(43, 120, 197), rgb(46, 134, 223));
+  box-shadow: 5px 5px 7px 1px rgb(4, 72, 139);
   color: #fff;
 }
