--- a/src/lib/components/Button/Button.css
+++ b/src/lib/components/Button/Button.css
@@ -4,11 +4,31 @@
   border-radius: 20px;
   line-height: 0;
   font-size: 14px;
-  
-  
+  cursor: pointer;
+  width: 100px;
+  height: 40px;
+  background-image: linear-gradient(
+    3deg,
+    rgb(179, 214, 248),
+    rgb(155, 201, 247)
+  );
+  box-shadow: 5px 5px 7px 1px rgb(4, 72, 139);
+  color: rgb(112, 111, 111);
 }
-.btn--primary {
-  background-image: linear-gradient(3deg, rgb(179, 214, 248), rgb(155, 201, 247));
+
+.btn:hover {
+  background-image: linear-gradient(3deg, rgb(43, 120, 197), rgb(46, 134, 223));
+  box-shadow: 5px 5px 7px 1px rgb(4, 72, 139);
+  color: #fff;
+}
+
+
+/* .btn--primary {
+  background-image: linear-gradient(
+    3deg,
+    rgb(179, 214, 248),
+    rgb(155, 201, 247)
+  );
   box-shadow: 5px 5px 7px 1px rgb(4, 72, 139);
   color: rgb(112, 111, 111);
 }
@@ -16,4 +36,5 @@
   background-image: linear-gradient(3deg, rgb(43, 120, 197), rgb(46, 134, 223));
   box-shadow: 5px 5px 7px 1px rgb(4, 72, 139);
   color: #fff;
-}
+} */
+
