--- a/src/lib/components/Select/Select.css
+++ b/src/lib/components/Select/Select.css
@@ -6,6 +6,7 @@
     box-shadow: 5px 5px 7px 1px rgb(4, 72, 139) ;
   border: 2px;
   color: rgb(80, 78, 78);
+  outline: 0;
 }
 .formDes{
     display: flex;
